--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
    <header>
     <nav>
-        <a href="Index.html">WebStudio</a>
-        <Ul>
+        <a href="index.html">WebStudio</a>
+        
+        <ul>
             <li>
                 <a href="">Студия</a>
             </li>
@@ -20,7 +21,7 @@
             <li>
                 <a href="">Контакты</a>
             </li>
-        </Ul>
+        </ul>
     </nav>
     <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -35,33 +36,44 @@
     </section>
     
     <section>
-<h2>Внимание к деталям</h2>
+        <h2>какие-то 4 пункта</h2>
+<ul>
+<li>
+<h3>Внимание к деталям</h3>
 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-<h2>Пунктуальность</h2>
+</li>
+<li>
+<h3>Пунктуальность</h3>
 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-<h2>Планирование</h2>
+</li>
+<li><h3>Планирование</h3>
 <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-<h2>Современные технологии</h2>
-<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-    </section>
+</li>
+<li>
+<h3>Современные технологии</h3>
+<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>  
+</li>
+</ul>
+
+</section>
 
     <section>
-<h3>разработка</h3>
+<h2>Чем мы занимаемся</h2>
 <ul>
     <li>
-    <img src="./images/develop_1.jpg" alt="on paper"
+    <img src="./images/develop_1.jpg" alt="на бумаге"
     height="294"
     width="370">
    </li>
 
     <li>
-        <img src="./images/develop_2.jpg" alt="on mobile"
+        <img src="./images/develop_2.jpg" alt="на телефоне"
     height="294"
     width="370">
     </li>
 
     <li>
-        <img src="./images/develop_3.jpg" alt="on laptop"
+        <img src="./images/develop_3.jpg" alt="на компьютере"
     height="294"
     width="370">
     </li>
@@ -70,7 +82,7 @@
     </section>
 
     <section>
-        <h3>Наша команда</h3>
+        <h2>Наша команда</h2>
 <ul>
         <li>
     <img src="./images/игорь_демьяненко_1.jpg" alt="Игорь Демьненко" height="260" width="270">
@@ -101,6 +113,7 @@
 </main>
 
 <footer>
+    <a href="index.html">WebStudio</a>
 <address>
     <ul>
         <li><a href="https://goo.gl/maps/ts3VoMMfmy22Pk4LA" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
